Adding API endpoints and Swagger2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.jpa.database=postgresql
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://kandula.db.elephantsql.com:5432/jrvdmheb
+spring.datasource.username=jrvdmheb
+spring.datasource.password=IQZfNXVwnUAD1XBaBgerfzFASUvNXd5b
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=create-drop
