--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,12 @@ spring.datasource.username=jrvdmheb
 spring.datasource.password=IQZfNXVwnUAD1XBaBgerfzFASUvNXd5b
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.application.name=micro-ci-projects
+spring.cloud.consul.host=localhost
+spring.cloud.consul.port=8500
+spring.cloud.consul.discovery.health-check-path=/health
+spring.cloud.consul.discovery.health-check-interval=10s
+
