--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,9 @@ spring.jpa.show-sql=false
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.application.name=micro-ci-projects
-spring.cloud.consul.host=localhost
-spring.cloud.consul.port=8500
+spring.cloud.consul.host=micro-ci.westus2.cloudapp.azure.com
+spring.cloud.consul.port=40601
 spring.cloud.consul.discovery.health-check-path=/health
 spring.cloud.consul.discovery.health-check-interval=10s
+spring.cloud.consul.config.acl-token=ab8bdda5-2a4a-1ebf-0383-95ccbebe63b4
 
