--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,19 @@
 spring.jpa.database=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://kandula.db.elephantsql.com:5432/jrvdmheb
-spring.datasource.username=jrvdmheb
-spring.datasource.password=IQZfNXVwnUAD1XBaBgerfzFASUvNXd5b
+
+spring.datasource.url=jdbc:${DB_PLATFORM:postgresql}://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:projet}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASSWORD:postgres}
+spring.datasource.platform=${DB_PLATFORM:postgresql}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.application.name=micro-ci-projects
-spring.cloud.consul.host=micro-ci.westus2.cloudapp.azure.com
-spring.cloud.consul.port=40601
+spring.cloud.consul.host=${CONSUL_HOST:localhost}
+spring.cloud.consul.port=${CONSUL_PORT:2020}
 spring.cloud.consul.discovery.health-check-path=/api/v1/health
 spring.cloud.consul.discovery.health-check-interval=10s
-spring.cloud.consul.config.acl-token=ab8bdda5-2a4a-1ebf-0383-95ccbebe63b4
+spring.cloud.consul.config.acl-token=${CONSUL_TOKEN}
 
