--- a/.github/workflows/micro-ci-projects.yml
+++ b/.github/workflows/micro-ci-projects.yml
@@ -14,22 +14,22 @@ jobs:
     # Add your build steps here
 
   # Uncomment and replace {userName} by your account folder name
-  # deploy:
-  #   name: Build/Publish Docker Images to DockerHub & Deploy to Azure VM
-  #   runs-on: ubuntu-latest
-  #   if: github.ref == 'refs/heads/master'
+   deploy:
+     name: Build/Publish Docker Images to DockerHub & Deploy to Azure VM
+     runs-on: ubuntu-latest
+     #if: github.ref == 'refs/heads/master'
 
-  #   steps:
-  #   - name: Checkout Project
-  #     uses: actions/checkout@v1
+     steps:
+     - name: Checkout Project
+       uses: actions/checkout@v1
 
-  #   - name: Build & Publish Docker Image
-  #     uses: docker/build-push-action@v1
-  #     with:
-  #       username: ${{ secrets.DOCKER_USERNAME }}
-  #       password: ${{ secrets.DOCKER_PASSWORD }}
-  #       repository: micro-ci-al2/micro-ci-projects
-  #       tag_with_ref: true
+     - name: Build & Publish Docker Image
+       uses: docker/build-push-action@v1
+       with:
+         username: ${{ secrets.DOCKER_USERNAME }}
+         password: ${{ secrets.DOCKER_PASSWORD }}
+         repository: micro-ci-al2/micro-ci-projects
+         tag_with_ref: true
 
   #   - name: Azure Login
   #     uses: azure/login@v1
