--- a/.github/workflows/micro-ci-projects.yml
+++ b/.github/workflows/micro-ci-projects.yml
@@ -17,7 +17,7 @@ jobs:
    deploy:
      name: Build/Publish Docker Images to DockerHub & Deploy to Azure VM
      runs-on: ubuntu-latest
-     #if: github.ref == 'refs/heads/master'
+     if: github.ref == 'refs/heads/master'
 
      steps:
      - name: Checkout Project
@@ -31,13 +31,13 @@ jobs:
          repository: micro-ci-al2/micro-ci-projects
          tag_with_ref: true
 
-  #   - name: Azure Login
-  #     uses: azure/login@v1
-  #     with:
-  #       creds: ${{ secrets.AZURE_CREDENTIALS }}
+     - name: Azure Login
+       uses: azure/login@v1
+       with:
+         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-  #   - name: Azure CLI script
-  #     uses: azure/CLI@v1
-  #     with:
-  #       inlineScript: |
-  #         az vm run-command invoke -g ${{ secrets.AZURE_RESOURCE_GRP }} -n ${{ secrets.AZURE_VM }} --command-id RunShellScript --scripts "cd /home/{userName} && wget -q https://raw.githubusercontent.com/esgi-microservices-al2/micro-ci-projects/master/.github/azure/docker-compose.yml -O docker-compose.yml && docker-compose stop && docker-compose rm && docker-compose up -d"
+     - name: Azure CLI script
+       uses: azure/CLI@v1
+       with:
+         inlineScript: |
+           az vm run-command invoke -g ${{ secrets.AZURE_RESOURCE_GRP }} -n ${{ secrets.AZURE_VM }} --command-id RunShellScript --scripts "cd /home/micro-ci-al2/micro-ci-projects && wget -q https://raw.githubusercontent.com/esgi-microservices-al2/micro-ci-projects/master/.github/azure/docker-compose.yml -O docker-compose.yml && docker-compose stop && docker-compose rm && docker-compose up -d"
