--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.show-sql=false
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.application.name=micro-ci-projects
+spring.cloud.consul.discovery.tags=projects-microservice
 spring.cloud.consul.host=${CONSUL_HOST:localhost}
 spring.cloud.consul.port=${CONSUL_PORT:2020}
 spring.cloud.consul.discovery.health-check-path=/api/v1/health
