--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,11 +1,11 @@
 spring:
   cloud:
     consul:
-      host: ${CONSUL_HOST:localhost}
-      port: ${CONSUL_PORT:2020}
+      host: http://micro-ci.westus2.cloudapp.azure.com
+      port: 40601
       discovery:
         tags: projects-microservice
         health-check-interval: 10s
         health-check-path: /api/v1/health
       config:
-        acl-token: ${CONSUL_TOKEN}
+        acl-token: ab8bdda5-2a4a-1ebf-0383-95ccbebe63b4
