--- a/.github/azure/docker-compose.yml
+++ b/.github/azure/docker-compose.yml
@@ -16,24 +16,26 @@ services:
       - 5432
     restart: unless-stopped
 
-    microservice-projet:
-      image: esgimicroci/al2-projects
-      ports:
-        - "8080:8080"
-      environment:
-        DB_NAME: ${DB_NAME:-microserviceProjet}
-        DB_USER: ${DB_USER:-root}
-        DB_PASSWORD: ${DB_PASSWORD:-root}
-        CONSUL_HOST: ${CONSUL_HOST}
-        CONSUL_TOKEN: ${CONSUL_TOKEN}
-        CONSUL_PORT: ${CONSUL_PORT}
-      volumes:
-        - al2projects:/var/projects
-      depends_on:
-        - db
+  microservice-projet:
+    image: esgimicroci/al2-projects
+    ports:
+      - "8080:8080"
+    environment:
+      DB_NAME: ${DB_NAME:-microserviceProjet}
+      DB_USER: ${DB_USER:-root}
+      DB_PASSWORD: ${DB_PASSWORD:-root}
+      CONSUL_HOST: http://micro-ci.westus2.cloudapp.azure.com
+      CONSUL_TOKEN: CONSUL_TOKEN:ab8bdda5-2a4a-1ebf-0383-95ccbebe63b4
+      CONSUL_PORT: CONSUL_PORT:40601
+    volumes:
+      - al2projects:/var/projects
+    depends_on:
+      - db
 
 volumes:
   postgres:
+  al2projects:
+    external: true
 
 
 # Add your networks/volumes/services for your microservice
