--- a/.github/azure/docker-compose.yml
+++ b/.github/azure/docker-compose.yml
@@ -25,8 +25,8 @@ services:
       DB_USER: ${DB_USER:-root}
       DB_PASSWORD: ${DB_PASSWORD:-root}
       CONSUL_HOST: http://micro-ci.westus2.cloudapp.azure.com
-      CONSUL_TOKEN: CONSUL_TOKEN:ab8bdda5-2a4a-1ebf-0383-95ccbebe63b4
-      CONSUL_PORT: CONSUL_PORT:40601
+      CONSUL_TOKEN: ab8bdda5-2a4a-1ebf-0383-95ccbebe63b4
+      CONSUL_PORT: 40601
     volumes:
       - al2projects:/var/projects
     depends_on:
