--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.database=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:${DB_PLATFORM:postgresql}://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:projet}
+spring.datasource.url=jdbc:${DB_PLATFORM:postgresql}://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:microserviceProjet}
 spring.datasource.username=${DB_USER:postgres}
-spring.datasource.password=${DB_PASSWORD:postgres}
+spring.datasource.password=${DB_PASSWORD:admin}
 spring.datasource.platform=${DB_PLATFORM:postgresql}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
