--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.database=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:${DB_PLATFORM:postgresql}://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:microserviceProjet}
+spring.datasource.url=jdbc:${DB_PLATFORM:postgresql}://db:${DB_PORT:5432}/${DB_NAME:microserviceProjet}
 spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASSWORD:admin}
 spring.datasource.platform=${DB_PLATFORM:postgresql}
