--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.database=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.url=jdbc:${DB_PLATFORM:postgresql}://db:${DB_PORT:5432}/microserviceProjet
-spring.datasource.username=postgre
+spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.platform=${DB_PLATFORM:postgresql}
 
