--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -8,5 +8,5 @@ spring:
       discovery:
         tags: projects-microservice
         health-check-interval: 10s
-        health-check-url: http://localhost:8080/api/v1/health
+        health-check-url: http://127.0.0.1:8080/api/v1/health
         acl-token: ab8bdda5-2a4a-1ebf-0383-95ccbebe63b4
