--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.jpa.database=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.url=jdbc:${DB_PLATFORM:postgresql}://db:${DB_PORT:5432}/microserviceProjet
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASSWORD:admin}
 spring.datasource.platform=${DB_PLATFORM:postgresql}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
