--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -11,4 +11,4 @@ spring:
         health-check-url: http://10.0.0.6:8080/api/v1/health
         acl-token: ab8bdda5-2a4a-1ebf-0383-95ccbebe63b4
         service-name: projects-microservice
-        hostname: micro-ci-al2.internal.cloudapp.net:8080
+        address: 127.0.0.1
