--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,13 @@ spring.datasource.url=jdbc:${DB_PLATFORM:postgresql}://db:${DB_PORT:5432}/micros
 spring.datasource.username=${DB_USER:postgres}
 spring.datasource.password=${DB_PASSWORD:admin}
 spring.datasource.platform=${DB_PLATFORM:postgresql}
-
+        
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 
-spring.rabbitmq.host=${RABBITMQ_HOST:10.0.0.6}
+spring.rabbitmq.host=${RABBITMQ_HOST:10.0.0.5}
+spring.rabbitmq.username=${RABBITMQ_USER:esgi-al2}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:&U%xw30j5JpeZrU}
 spring.rabbitmq.port=${RABBITMQ_PORT:40701}
 
 spring.jpa.hibernate.ddl-auto=create-drop
