--- a/.github/azure/docker-compose.yml
+++ b/.github/azure/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - POSTGRES_PASSWORD=admin
       - POSTGRES_DB=microserviceProjet
     volumes:
-      - postgres:/data/postgres/project
+      - postgres:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     restart: always
